<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/relativelayout_searchBar"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:id="@+id/search_text"
            android:layout_marginStart="20dp"
            android:hint="Search or jump to ..."
            android:layout_toEndOf="@id/img_cat"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/img_cat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cat"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/search_button"
            android:text="Search"
            />


    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/relativelayout_searchBar"
        android:background="#FF2A2C30" />


    <TableLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_above="@+id/bottom_relativelayout"
        android:orientation="vertical">

    </TableLayout>

    <RelativeLayout
        android:id="@+id/bottom_relativelayout"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Profile" />

            <Button
                android:id="@+id/repositories_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Repository" />

            <Button
                android:id="@+id/followers_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Followers" />

            <Button
                android:id="@+id/following_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Following" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>