<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:layout_marginTop="35dp"
                android:src="@drawable/cat" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Name"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
             />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="username" />

        <TextView
            android:id="@+id/website_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="website" />

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="bio" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="email" />

        <TextView
            android:id="@+id/create_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:text="create date" />

    </LinearLayout>
    </ScrollView>


</RelativeLayout>