<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:orientation="vertical">

    <!-- username tag-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username:"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <!-- username edit area-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLogin"
        android:layout_gravity="center_horizontal" />

    <!-- password tag-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="Password:" />

    <!-- password edit area-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal" />

    <!-- button to login-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Login"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/login_button" />

</LinearLayout>
